example/secondfile/objects/RDS_Circuit_ID_Mapping__c.object
<CustomObject>
    <description>RDS-Premise Details- Circuit and VLAN Details- Access Circuit ID-Circuit ID Mapping</description>
    <fields>
        <fullName>Access_Speed_Max__c</fullName>
        <label>Access Speed Max</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Access_Speed_Min__c</fullName>
        <label>Access Speed Min</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Access_Type__c</fullName>
        <label>Access Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Circuit_Type__c</fullName>
        <label>Circuit Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Circuit__c</fullName>
        <label>Circuit IDs Required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AVPN</fullName>
                </value>
                <value>
                    <fullName>MIS</fullName>
                </value>
                <value>
                    <fullName>PNT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>RDS-Circuit ID Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Circuit_Type__c</columns>
        <columns>Circuit__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CIM-{00000}</displayFormat>
        <label>Activity</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RDS-Circuit ID Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>